// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nature-ui/layout Badge override the theming props 1`] = `
<DocumentFragment>
  <span
    class="rounded-sm px-1 py-0.5 text-pink-500 uppercase font-semibold inline-block align-middle border-pink-500 css-1kvi9rf-Badge"
  >
    Badge
  </span>
</DocumentFragment>
`;

exports[`@nature-ui/layout Badge should render with default theming 1`] = `
<DocumentFragment>
  <span
    class="rounded-sm px-1 py-0.5 text-gray-700 uppercase font-semibold inline-block align-middle bg-gray-200 css-1kvi9rf-Badge"
  >
    Badge
  </span>
</DocumentFragment>
`;

exports[`@nature-ui/layout Box as - prop works correctly 1`] = `
<DocumentFragment>
  <a
    class=""
    href="www.google.com"
  >
    This is box
  </a>
</DocumentFragment>
`;

exports[`@nature-ui/layout Box should render box correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    This is box
  </div>
</DocumentFragment>
`;
